Fix MVC and various bugs, final polish